# testsmart

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yml  lint.yml
docs/: conf.py  hypothesis.md  index.md
examples/: alpha_comp.py  alpha_estimators.py  profile_alpha.py
test_smart/: __init__.py  hypothesis.py  sprt.py  utils.py
tests/: test_running_summaries.py
testsmart/: __init__.py  hypothesis.py  nnm.py  sprt.py  utils.py
testsmart/test_smart/: nnm.py  sprt.py  utils.py
